<resources>

    <!-- Activities -->
    <string name="app_name">Zram Settings</string>
    <string name="zram ">Zram</string>
    <string name="vm">VM</string>
    <string name="status">Virtual Status</string>
    <string name="management">Memory Module</string>
    <!-- minfree -->
   <string name="prefcat_oom">MINFREE TASKKILLER</string>
   <string name="title_foreground_app">Foreground Applications</string>
   <string name="title_visible_app">Visible Applications</string>
   <string name="title_secondary_server">Secondary Server</string>
   <string name="title_hidden_app">Hidden Applications</string>
   <string name="title_content_providers">Content Providers</string>
   <string name="title_empty_app">Empty Applications</string>
   <string name="prefcat_oom_predefines">PRESETS</string>
   <string name="pt_oom">Minfree Taskkiller Presets</string>

   <string name="pt_verylight">Very Light</string>
   <string name="pt_light">Light</string>
   <string name="pt_medium">Medium</string>
   <string name="pt_aggressive">Aggressive</string>
   <string name="pt_veryaggressive">Very Aggressive</string>
   
   <!-- do not kill proc -->
    <string name="prefcat_user_proc">NOT KILLABLE USER PROCESSES</string>
    <string name="prefcat_sys_proc">NOT KILLABLE SYSTEM PROCESSES</string>
    <string name="pt_user_proc">Enable not killable user processes</string>
    <string name="pt_sys_proc">Enable not killable system processes</string>
    <string name="pt_user_names_proc">User Processes whitelist</string>
    <string name="pt_sys_names_proc">System Processes whitelist</string>
    <string name="ps_restore_boot">Restore above settings at boot</string>
    <string name="ps_user_proc">The list of user process names (comma separated)</string>
    <string name="ps_sys_proc">The list of system process names (comma separated)</string>
    
    <!-- zRam -->
    <string name="prefcat_zram">zRAM</string>
    <string name="pt_run_zram">Enable zRam</string>
    <string name="zram_set_title">Settings</string>
    <string name="ps_zram">Compress memory for increased virtual capacity</string>
    <string name="zram_compressed_size">Compressed Data Size</string>
    <string name="zram_compressed_ratio">Compression Ratio</string>
    <string name="zram_original_size">Original Data Size</string>
    <string name="zram_used_ratio">Used Ratio</string>
    <string name="zram_mem_used">Total Used Memory</string>
    <string name="zram_disk_size">Disk Size: %s</string>
    <string name="mt_start">Start</string>
    <string name="mt_stop">Stop</string>
    <string name="zram_num_reads">Number of Reads</string>
    <string name="zram_num_writes">Number of Writes</string>
    
    <!-- VM settings -->
    <string name="ps_vm_set_on_boot">If enabled will restore all vm settings on reboot</string>
    <string name="dirty_ratio_title">Dirty ratio</string>
    <string name="dirty_background_title">Dirty background ratio</string>
    <string name="dirty_expire_title">Dirty expire centisecs</string>
    <string name="dirty_writeback_title">Dirty writeback centisecs</string>
    <string name="min_free_title">Minfree kbytes</string>
    <string name="overcommit_title">Overcommit ratio</string>
    <string name="swappiness_title">Swappiness</string>
    <string name="vfs_title">VFS cache pressure</string>
    
    <!-- Other settings -->
    <string name="prefcat_free_memory">FREE MEMORY</string>
    <string name="prefcat_tweaks">FAST CHARGE</string>
    <string name="prefcat_misc_short">MISC</string>
    <string name="prefcat_read_ahead">SD READ AHEAD</string>
    <string name="prefcat_vm_settings">VM SETTINGS</string>
    <string name="dt_free_memory">Minfree Taskkiller</string>
    <string name="dt_read_ahead">SD Read Ahead</string>
    <string name="pt_free_memory">Free memory</string>
    <string name="ps_free_memory">Amount of RAM the minfree taskkiller will keep |
        Current: %s
    </string>
    <string name="ps_free_memory_boot">Apply the amount above at boot</string>
    <string name="pt_read_ahead">SD read ahead</string>
    <string name="ps_read_ahead">Amount to read ahead on SDCard reads in kb |
        Current: %s
    </string>

    <string name="ps_fast_charge_boot">Fast charge</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER
        EACH REBOOT!\n\nWhile Fast Charge is ON, you can *only* charge your phone!
    </string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
    
    <string name="sob">Set on boot</string>
    <string name="ps_blx_boot">Apply the amount above at boot</string>
    
    <!-- dynamic write back -->
   <string name="dynamic_writeback_info">Dynamic Dirty Page Writebacks feature\nAuthor Cristoforo Cataldo (Christopher83)</string>
   <string name="dynamic_write_back_title">DYNAMIC DIRTY PAGE WRITEBACKS</string>
   <string name="pt_dynamic_write_back">Dynamic Dirty Writeback</string>
   <string name="dynamic_writeback_active_title">Dirty Writeback Active centisecs</string>
   <string name="dynamic_writeback_suspend_title">Dirty Writeback Suspend centisecs</string>
<!--  -->
    <string name="size_25_mb">25mb</string>
    <string name="size_50_mb">50mb</string>
    <string name="size_75_mb">75mb</string>
    <string name="size_80_mb">80mb</string>
    <string name="size_100_mb">100mb</string>
    <string name="size_128_kb">128kb</string>
    <string name="size_256_kb">256kb</string>
    <string name="size_512_kb">512kb</string>
    <string name="size_1024_kb">1024kb</string>
    <string name="size_2048_kb">2048kb</string>
    <string name="size_4096_kb">4096kb</string>
    
    <!-- pfk -->
   <string name="pfk_info">Phantom Key Presses Filter module ver. %s\nAuthor Cristoforo Cataldo (Christopher83)</string>
   <string name="prefcat_pfk">PHANTOM KEY PRESSES FILTER</string>
   <string name="pt_home_enabled">Home key filter</string>
   <string name="ps_home_enabled">Ignored key pressed: %s</string>
   <string name="home_allowed_irq_title">Max allowed interrupts</string>
   <string name="home_report_wait_title">Report wait time</string>
	
   <string name="pt_menuback_enabled">Menu/Back keys filter</string>
   <string name="ps_menuback_enabled">Ignored key pressed: %s</string>
   <string name="menuback_interrupt_checks_title">Interrupts checks</string>
   <string name="menuback_first_err_wait_title">First error wait time</string>
   <string name="menuback_last_err_wait_title">Last error wait time</string>
   <string name="ps_pfk_set_on_boot">If enabled will restore all pkf settings on reboot</string>
   
       <!-- bln -->
    <string name="prefcat_bln">BACKLIGHT NOTIFICATION</string>
    <string name="pt_bln">Backlight Notification</string>
    
    <!-- bl_touch -->
   <string name="prefcat_bltouch">BACKLIGHT ON TOUCHSCREEN</string>
   <string name="pt_bltouch">Backlight on touchscreen</string>	
   
   <!-- dsync -->
   <string name="dsync_info">Dynamic FSync feature\nAuthor Paul Reioux (faux123)</string>
   <string name="prefcat_dsync">DYNAMIC FSYNC</string>
   <string name="ps_dsync">Setting will be restored on reboot</string>
   <string name="pt_dsync">Dynamic Fsync</string>
   
   <!-- bl_timeout -->
   <string name="prefcat_bltimeout">BACKLIGHT TIMEOUT</string>
   <string name="ps_bltimeout">%s ms</string>
   <string name="bltimeout_title">Backlight timeout</string>
   
   <string name="ps_zram_info">Zram must be stopped in order to change disk size</string>

</resources>