<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
                  
	<PreferenceCategory
            android:title="Kernel Settings">

        <CheckBoxPreference
        android:key="pref_purgeable_assets"
        android:title="Allow purging of assets"
        android:summary="Purging of bitmap memory assets allows the freeing of more RAM when needed (Requires Reboot)" />

    <CheckBoxPreference
        android:key="pref_ksm"
        android:title="Kernel samepage merging"
        android:summary="KSM reduces physical memory requirments and improves performance" />
    </PreferenceCategory>
    
	<PreferenceCategory
            android:title="VM Spare Parts">
    
		<CheckBoxPreference
            android:key="compcache_opt"
            android:title="Enable Zram"
            android:summaryOn="Zram enabled"
            android:summaryOff="Zram disabled"/>

        <CheckBoxPreference
            android:key="linuxswap_opt"
            android:title="Use LinuxSWAP"
            android:summaryOn="LinuxSWAP is enabled"
            android:summaryOff="LinuxSWAP is disabled"/>
    
		<CheckBoxPreference
            android:key="apps2sd_opt"
            android:title="Apps2SD"
            android:summaryOn="Apps2SD Enabled"
            android:summaryOff="Apps2SD Disabled"/>

        <CheckBoxPreference
            android:key="dccache_opt"
            android:title="Dalvik-Cache on /cache"
            android:summaryOn="Dalvik-Cache on /cache Enabled"
            android:summaryOff="Dalvik-Cache on /cache Disabled"/>

        <CheckBoxPreference
            android:key="dcsdcard_opt"
            android:title="Dalvik-Cache on SDCard"
            android:summaryOn="Dalvik-Cache on SDCard Enabled"
            android:summaryOff="Dalvik-Cache on SDCard Disabled"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:key="category_read_ahead"
            android:title="@string/prefcat_read_ahead">

        <ListPreference
                android:dialogTitle="@string/dt_read_ahead"
                android:entries="@array/read_ahead"
                android:entryValues="@array/read_ahead_values"
                android:key="pref_read_ahead"
                android:persistent="true"
                android:title="@string/pt_read_ahead"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_read_ahead_boot"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>

<!-- Dynamic Fsync -->
    <PreferenceCategory
            android:key="dsync"
            android:title="@string/prefcat_dsync">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dsync"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_dsync"/>
    </PreferenceCategory>
<!-- BL timeout -->
    <PreferenceCategory
            android:key="bltimeout"
            android:title="@string/prefcat_bltimeout">
        <Preference
                android:key="pref_bltimeout"
                android:title="@string/bltimeout_title"/>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="bltimeout_sob"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>
<!-- BL touch -->
    <PreferenceCategory
            android:key="bltouch"
            android:title="@string/prefcat_bltouch">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_bltouch"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_bltouch"/>
  </PreferenceCategory>
    <!-- BLN -->
    <PreferenceCategory
            android:key="bln"
            android:title="@string/prefcat_bln">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_bln"
                android:summary="@string/ps_dsync"
                android:title="@string/pt_bln"/>
    </PreferenceCategory>
    <!-- PFK -->
    <PreferenceCategory
            android:key="pfk"
            android:title="@string/prefcat_pfk">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_home_on"
                android:summary="@string/ps_home_enabled"
                android:title="@string/pt_home_enabled"/>

        <Preference
                android:key="pref_home_allowed_irq"
                android:title="@string/home_allowed_irq_title"/>
        <Preference
                android:key="pref_home_report_wait"
                android:title="@string/home_report_wait_title"/>    
	
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_menuback_on"
                android:summary="@string/ps_menuback_enabled"
                android:title="@string/pt_menuback_enabled"/>
        <Preference
                android:key="pref_menuback_interrupt_checks"
                android:title="@string/menuback_interrupt_checks_title"/>
        <Preference
                android:key="pref_menuback_first_err_wait"
                android:title="@string/menuback_first_err_wait_title"/>
        <Preference
                android:key="pref_menuback_last_err_wait"
                android:title="@string/menuback_last_err_wait_title"/>	
	 <CheckBoxPreference
                android:defaultValue="false"
                android:key="pfk_sob"
                android:summary="@string/ps_pfk_set_on_boot"
                android:title="@string/sob"/>	
    </PreferenceCategory>
<!-- Dynamic write back-->
    <PreferenceCategory
            android:key="cat_dynamic_write_back"
            android:title="@string/dynamic_write_back_title">

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_dynamic_dirty_writeback"
                android:title="@string/pt_dynamic_write_back"/>
        <Preference
                android:key="pref_dynamic_writeback_active"
                android:title="@string/dynamic_writeback_active_title"/>
        <Preference
                android:key="pref_dynamic_writeback_suspend"
                android:title="@string/dynamic_writeback_suspend_title"/>    
	 <CheckBoxPreference
                android:defaultValue="false"
                android:key="dynamic_write_back_sob"
                android:summary="@string/ps_blx_boot"
                android:title="@string/sob"/>	
    </PreferenceCategory>
<!-- -->
    <PreferenceCategory
            android:key="vm_settings"
            android:title="@string/prefcat_vm_settings">

        <Preference
                android:key="pref_dirty_ratio"
                android:title="@string/dirty_ratio_title"/>

        <Preference
                android:key="pref_dirty_background"
                android:title="@string/dirty_background_title"/>

        <Preference
                android:key="pref_dirty_expire"
                android:title="@string/dirty_expire_title"/>

        <Preference
                android:key="pref_dirty_writeback"
                android:title="@string/dirty_writeback_title"/>

        <Preference
                android:key="pref_min_free_kb"
                android:title="@string/min_free_title"/>

        <Preference
                android:key="pref_overcommit"
                android:title="@string/overcommit_title"/>

        <Preference
                android:key="pref_swappiness"
                android:title="@string/swappiness_title"/>

        <Preference
                android:key="pref_vfs"
                android:title="@string/vfs_title"/>

        <CheckBoxPreference
                android:defaultValue="false"
                android:key="vm_sob"
                android:summary="@string/ps_vm_set_on_boot"
                android:title="@string/sob"/>
    </PreferenceCategory>
</PreferenceScreen>