<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/preview"
        android:paddingBottom="20dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:id="@+id/relativeLayout1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zram_compressed_size"
                android:id="@+id/tt1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t1"
                android:textSize="18dip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/relativeLayout2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zram_compressed_ratio"
                android:id="@+id/tt2"
                android:layout_gravity="center"
                android:textSize="14dip" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t2"
                android:textSize="18dip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:id="@+id/relativeLayout3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zram_original_size"
                android:id="@+id/tt3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t3"
                android:textSize="18dip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:id="@+id/relativeLayout4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zram_used_ratio"
                android:id="@+id/tt4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t4"
                android:textSize="18dip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:id="@+id/relativeLayout5"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zram_mem_used"
                android:id="@+id/tt5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t5"
                android:textSize="18dip"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:gravity="right"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:id="@+id/set1"
        android:layout_below="@+id/preview"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/zram_disk_size"
            android:id="@+id/tval1"
            android:gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/val1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingTop="10dip"
            android:layout_below="@+id/set1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mt_start"
                android:id="@+id/apply"
                android:layout_weight="0.5"
                android:textSize="14dp" />

        </LinearLayout>
    </RelativeLayout>
    </ScrollView>